--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@ngrx/effects": "^7.4.0",
     "@ngrx/router-store": "^7.4.0",
     "@ngrx/store": "^7.4.0",
+    "@ngrx/store-devtools": "^7.4.0",
     "bootstrap": "^3.4.1",
     "core-js": "^2.5.4",
     "firebase": "^5.9.3",
