--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+   "build:ssr": "npm run build:client-and-server-bundles && npm run webpack:server",
+   "serve:ssr": "node dist/server.js",
+   "build:client-and-server-bundles": "ng build --prod && ng run your-project-name:server",
+   "webpack:server": "webpack --config webpack.server.config.js --progress --colors"
   },
   "private": true,
   "dependencies": {
